// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MixedLetterSpacingText should render correctly 1`] = `
<PeachText
  style={[]}
>
  <BTCAmountChar
    char="0"
    letterSpacing={-1.65}
    reduceOpacity={true}
    style={[]}
    white={false}
  />
  <BTCAmountChar
    char="."
    letterSpacing={-4.62}
    reduceOpacity={true}
    style={[]}
    white={false}
  />
  <BTCAmountChar
    char="0"
    letterSpacing={-1.65}
    reduceOpacity={true}
    style={[]}
    white={false}
  />
  <BTCAmountChar
    char="1"
    letterSpacing={-1.65}
    reduceOpacity={false}
    style={[]}
    white={false}
  />
  <BTCAmountChar
    char=" "
    letterSpacing={-7.699999999999999}
    reduceOpacity={false}
    style={[]}
    white={false}
  />
  <BTCAmountChar
    char="2"
    letterSpacing={-1.65}
    reduceOpacity={false}
    style={[]}
    white={false}
  />
  <BTCAmountChar
    char="8"
    letterSpacing={-1.65}
    reduceOpacity={false}
    style={[]}
    white={false}
  />
  <BTCAmountChar
    char="0"
    letterSpacing={-1.65}
    reduceOpacity={false}
    style={[]}
    white={false}
  />
  <BTCAmountChar
    char=" "
    letterSpacing={-7.699999999999999}
    reduceOpacity={false}
    style={[]}
    white={false}
  />
  <BTCAmountChar
    char="0"
    letterSpacing={-1.65}
    reduceOpacity={false}
    style={[]}
    white={false}
  />
  <BTCAmountChar
    char="0"
    letterSpacing={-1.65}
    reduceOpacity={false}
    style={[]}
    white={false}
  />
  <BTCAmountChar
    char="0"
    letterSpacing={-1.65}
    reduceOpacity={false}
    style={[]}
    white={false}
  />
</PeachText>
`;

exports[`MixedLetterSpacingText should render correctly if the value is 0 1`] = `
<PeachText
  style={[]}
>
  <BTCAmountChar
    char="0"
    letterSpacing={-1.65}
    reduceOpacity={true}
    style={[]}
    white={false}
  />
  <BTCAmountChar
    char="."
    letterSpacing={-4.62}
    reduceOpacity={true}
    style={[]}
    white={false}
  />
  <BTCAmountChar
    char="0"
    letterSpacing={-1.65}
    reduceOpacity={true}
    style={[]}
    white={false}
  />
  <BTCAmountChar
    char="0"
    letterSpacing={-1.65}
    reduceOpacity={true}
    style={[]}
    white={false}
  />
  <BTCAmountChar
    char=" "
    letterSpacing={-7.699999999999999}
    reduceOpacity={true}
    style={[]}
    white={false}
  />
  <BTCAmountChar
    char="0"
    letterSpacing={-1.65}
    reduceOpacity={true}
    style={[]}
    white={false}
  />
  <BTCAmountChar
    char="0"
    letterSpacing={-1.65}
    reduceOpacity={true}
    style={[]}
    white={false}
  />
  <BTCAmountChar
    char="0"
    letterSpacing={-1.65}
    reduceOpacity={true}
    style={[]}
    white={false}
  />
  <BTCAmountChar
    char=" "
    letterSpacing={-7.699999999999999}
    reduceOpacity={true}
    style={[]}
    white={false}
  />
  <BTCAmountChar
    char="0"
    letterSpacing={-1.65}
    reduceOpacity={true}
    style={[]}
    white={false}
  />
  <BTCAmountChar
    char="0"
    letterSpacing={-1.65}
    reduceOpacity={true}
    style={[]}
    white={false}
  />
  <BTCAmountChar
    char="0"
    letterSpacing={-1.65}
    reduceOpacity={false}
    style={[]}
    white={false}
  />
</PeachText>
`;

exports[`MixedLetterSpacingText should render correctly with white 1`] = `
<PeachText
  style={[]}
>
  <BTCAmountChar
    char="0"
    letterSpacing={-1.65}
    reduceOpacity={true}
    style={[]}
    white={true}
  />
  <BTCAmountChar
    char="."
    letterSpacing={-4.62}
    reduceOpacity={true}
    style={[]}
    white={true}
  />
  <BTCAmountChar
    char="0"
    letterSpacing={-1.65}
    reduceOpacity={true}
    style={[]}
    white={true}
  />
  <BTCAmountChar
    char="1"
    letterSpacing={-1.65}
    reduceOpacity={false}
    style={[]}
    white={true}
  />
  <BTCAmountChar
    char=" "
    letterSpacing={-7.699999999999999}
    reduceOpacity={false}
    style={[]}
    white={true}
  />
  <BTCAmountChar
    char="2"
    letterSpacing={-1.65}
    reduceOpacity={false}
    style={[]}
    white={true}
  />
  <BTCAmountChar
    char="8"
    letterSpacing={-1.65}
    reduceOpacity={false}
    style={[]}
    white={true}
  />
  <BTCAmountChar
    char="0"
    letterSpacing={-1.65}
    reduceOpacity={false}
    style={[]}
    white={true}
  />
  <BTCAmountChar
    char=" "
    letterSpacing={-7.699999999999999}
    reduceOpacity={false}
    style={[]}
    white={true}
  />
  <BTCAmountChar
    char="0"
    letterSpacing={-1.65}
    reduceOpacity={false}
    style={[]}
    white={true}
  />
  <BTCAmountChar
    char="0"
    letterSpacing={-1.65}
    reduceOpacity={false}
    style={[]}
    white={true}
  />
  <BTCAmountChar
    char="0"
    letterSpacing={-1.65}
    reduceOpacity={false}
    style={[]}
    white={true}
  />
</PeachText>
`;
